--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
 <div class="flex items-center gap-4">
 <img alt="IFWL Logo" class="h-10" src="ifwl_logo.png"/>
-<span class="text-sm text-gray-600 font-mono">Beta 0.1.15</span>
+<span class="text-sm text-gray-600 font-mono">Beta 0.1.30</span>
 </div>
 <div class="flex gap-2">
 function scrollToSection(id) {
@@ -409,62 +409,52 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 <div class="swiper-container">
 <div class="flex space-x-4 overflow-x-auto scrollbar-hide pb-4 px-1">
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">PC | SATURDAY SHOWDOWN! | GT3</h3>
 <p class="text-sm text-gray-600">Starts: May 10, 14:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14385" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
 <p class="text-sm text-gray-600">Starts: Apr 26, 17:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14476" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: Mar 19, 19:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13129" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | CONSOLE CROSSPLAY</h3>
 <p class="text-sm text-gray-600">Starts: Mar 19, 20:30</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13128" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">AC (CM) - SKODA OCTAVIA VRS</h3>
 <p class="text-sm text-gray-600">Starts: Apr 18, 18:30</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14057" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | CONSOLE CROSSPLAY</h3>
 <p class="text-sm text-gray-600">Starts: May 18, 19:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13702" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: May 18, 18:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13701" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S2 | GT3 PRO AM SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: Mar 26, 18:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13159" target="_blank">Sign Up</a>
 </div>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">IFWL.NET | PC | ENDURO!</h3>
 <p class="text-sm text-gray-600">Starts: Apr 26, 17:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/14476" target="_blank">Sign Up</a>
 </div>
 <div class="swiper-slide bg-white rounded-lg shadow p-4">
-
 <h3 class="text-lg font-semibold mt-2">S3 | BEGINNER SERIES | PC</h3>
 <p class="text-sm text-gray-600">Starts: Mar 19, 19:00</p>
 <a class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" href="https://www.thesimgrid.com/championships/13129" target="_blank">Sign Up</a>
@@ -735,5 +725,66 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     loadData();
     })();
   </script>
-</div></body>
+</div>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const SHEET_ID = "1i5qJ0GaRp_tGUb0rzXUBzGq0RowtbQSVDjAyNASyh4g";
+  const SHEET_NAME = "Results";
+  const API_KEY = "";
+  const BASE_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${SHEET_NAME}`;
+
+  const trackSelect = document.getElementById("trackSelect");
+  const driverSelect = document.getElementById("driverSelect");
+  const tableBody = document.querySelector("#leaderboardTable tbody");
+
+  function fetchData() {
+    fetch(BASE_URL)
+      .then((res) => res.text())
+      .then((data) => {
+        const json = JSON.parse(data.substr(47).slice(0, -2));
+        const rows = json.table.rows.map((r) => r.c.map((c) => (c ? c.v : "")));
+
+        const uniqueTracks = [...new Set(rows.map((r) => r[0]))];
+        const uniqueDrivers = [...new Set(rows.map((r) => r[3]))];
+
+        trackSelect.innerHTML = `<option value="">All Tracks</option>` + uniqueTracks.map(t => `<option>${t}</option>`).join("");
+        driverSelect.innerHTML = `<option value="">All Drivers</option>` + uniqueDrivers.map(d => `<option>${d}</option>`).join("");
+
+        displayRows(rows);
+        trackSelect.addEventListener("change", () => displayRows(rows));
+        driverSelect.addEventListener("change", () => displayRows(rows));
+      })
+      .catch((err) => {
+        alert("Failed to load data from Google Sheet.");
+        console.error(err);
+      });
+  }
+
+  function displayRows(rows) {
+    const trackFilter = trackSelect.value;
+    const driverFilter = driverSelect.value;
+
+    tableBody.innerHTML = "";
+
+    rows
+      .filter((r) => {
+        const matchTrack = !trackFilter || r[0] === trackFilter;
+        const matchDriver = !driverFilter || r[3] === driverFilter;
+        return matchTrack && matchDriver;
+      })
+      .forEach((r) => {
+        const row = document.createElement("tr");
+        r.slice(2, 7).forEach((val) => {
+          const td = document.createElement("td");
+          td.textContent = val;
+          row.appendChild(td);
+        });
+        tableBody.appendChild(row);
+      });
+  }
+
+  fetchData();
+});
+</script>
+</body>
 </html>
