--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.tailwindcss.com"></script>
+    
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IFWL ACC Dashboard</title>
-  </script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-900" style="background: url('ifwl_bg.webp') no-repeat center center fixed; background-size: cover;">
 
@@ -584,7 +586,7 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 });
     })();
     (function leaderboardModule() {
-      
+      <script src="https://cdn.tailwindcss.com">
 
     const SHEET_ID = "1i5qJ0GaRp_tGUb0rzXUBzGq0RowtbQSVDjAyNASyh4g";
     const SHEET_NAME = "Results";
