--- a/index.html
+++ b/index.html
@@ -357,6 +357,12 @@ document.getElementById("classificationForm").addEventListener("submit", functio
   const classification = resultData.classification;
 
   document.getElementById("result").innerHTML = `
+    <div class="mb-4">
+      <a href="https://discord.gg/bBax4w29vS" target="_blank"
+         class="inline-block mt-4 bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded">
+        📤 Share this result on Discord
+      </a>
+    </div>
     ${name}, your classification is:<br><strong>${resultData.classification}</strong><br>
     <span class="text-sm text-gray-600">${resultData.gapInfo}</span><br><br>
     <span class="text-sm text-blue-700 italic">${getRandomTip()}</span>
@@ -710,7 +716,6 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     loadData();
     })();
   </script>
-
 <script>
 function copyResultToClipboard(name, track, carClass, lapTime, classification) {
   const text = `🏁 ${name} just classified as: ${classification}\n📍 Track: ${track}\n🚗 Class: ${carClass}\n⏱️ Lap Time: ${lapTime}\n🔗 Classify yourself here: https://ifwlowner.github.io/ACC-driver-classifier/`;
