--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IFWL F1 Team Leaderboard</title>
+  <title>IFWL F1 Team Leaderboard 2025 </title>
   <style>
     body {
       font-family: Arial, sans-serif;
