--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,98 +1,83 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IFWL F1 Team Leaderboard 2025 </title>
+  <title>IFWL F1 Leaderboard</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0d0d0d;
-      color: #fff;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: #1f1f1f;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    th, td {
-      padding: 12px;
-      text-align: center;
-      border-bottom: 1px solid #333;
-    }
-    th {
-      background: #333;
-      text-transform: uppercase;
-      font-weight: bold;
-    }
-    tr:hover {
-      background: #292929;
-    }
-    .footer {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 0.8em;
-      color: #777;
-    }
+    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; padding: 20px; }
+    h1, h2 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; background: #1f1f1f; margin: 20px 0; border-radius: 8px; overflow: hidden; }
+    th, td { padding: 10px; text-align: center; border-bottom: 1px solid #333; }
+    th { background: #333; text-transform: uppercase; font-weight: bold; }
+    tr:hover { background: #2a2a2a; }
   </style>
 </head>
 <body>
 
-<h1>IFWL F1 Team Leaderboard</h1>
+<h1>IFWL F1 Leaderboard</h1>
 
+<h2>Driver Standings</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Driver</th>
+      <th>Team</th>
+      <th>Total Points</th>
+    </tr>
+  </thead>
+  <tbody id="drivers">
+    <tr><td colspan="3">Loading...</td></tr>
+  </tbody>
+</table>
+
+<h2>Constructors Standings</h2>
 <table>
   <thead>
     <tr>
       <th>Team</th>
-      <th>Driver 1</th>
-      <th>Driver 2</th>
       <th>Total Points</th>
     </tr>
   </thead>
-  <tbody id="leaderboard">
-    <tr><td colspan="4">Loading...</td></tr>
+  <tbody id="constructors">
+    <tr><td colspan="2">Loading...</td></tr>
   </tbody>
 </table>
 
-<div class="footer">
-  IFWL &copy; 2025
-</div>
-
 <script>
-  const apiUrl = 'https://script.google.com/macros/s/AKfycbyzy47hX-roRqeVZoxqCugWRZ543zRJnZXZiFn_1kgO8lFwiIXnrK5oT5ZU1TdHaFKY/exec'; // Replace this with your actual Google Apps Script Web App URL
+  const apiUrl = 'YOUR_NEW_WEB_APP_URL_HERE'; // Replace with your new web app URL
 
   async function fetchLeaderboard() {
     try {
       const response = await fetch(apiUrl);
       const data = await response.json();
 
-      // Sort by total points descending
-      data.sort((a, b) => b.totalPoints - a.totalPoints);
+      // Drivers
+      const driversTable = document.getElementById('drivers');
+      driversTable.innerHTML = '';
+      data.drivers.sort((a, b) => b.totalPoints - a.totalPoints).forEach(driver => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${driver.driver}</td>
+          <td>${driver.team}</td>
+          <td>${driver.totalPoints}</td>
+        `;
+        driversTable.appendChild(row);
+      });
 
-      const table = document.getElementById('leaderboard');
-      table.innerHTML = '';
-
-      data.forEach(team => {
+      // Constructors
+      const constructorsTable = document.getElementById('constructors');
+      constructorsTable.innerHTML = '';
+      data.constructors.sort((a, b) => b.points - a.points).forEach(team => {
         const row = document.createElement('tr');
         row.innerHTML = `
           <td>${team.team}</td>
-          <td>${team.driver1}</td>
-          <td>${team.driver2}</td>
-          <td>${team.totalPoints}</td>
+          <td>${team.points}</td>
         `;
-        table.appendChild(row);
+        constructorsTable.appendChild(row);
       });
+
     } catch (error) {
-      console.error('Error fetching leaderboard:', error);
-      document.getElementById('leaderboard').innerHTML = '<tr><td colspan="4">Error loading data</td></tr>';
+      console.error('Error:', error);
     }
   }
 
