--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -44,7 +44,7 @@
 </table>
 
 <script>
-  const apiUrl = 'YOUR_NEW_WEB_APP_URL_HERE'; // Replace with your new web app URL
+  const apiUrl = 'https://script.google.com/macros/s/AKfycbyzy47hX-roRqeVZoxqCugWRZ543zRJnZXZiFn_1kgO8lFwiIXnrK5oT5ZU1TdHaFKY/exec'; // Replace with your new web app URL
 
   async function fetchLeaderboard() {
     try {
