--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -79,6 +79,8 @@
 
     } catch (error) {
       console.error('Error:', error);
+      document.getElementById('drivers').innerHTML = '<tr><td colspan="3">Error loading driver data</td></tr>';
+      document.getElementById('constructors').innerHTML = '<tr><td colspan="2">Error loading constructor data</td></tr>';
     }
   }
 
