--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
   <style>
     body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; padding: 20px; }
     h1, h2 { text-align: center; }
+    .version { position: fixed; top: 10px; left: 10px; font-size: 0.8em; color: #777; }
     table { width: 100%; border-collapse: collapse; background: #1f1f1f; margin: 20px 0; border-radius: 8px; overflow: hidden; }
     th, td { padding: 10px; text-align: center; border-bottom: 1px solid #333; }
     th { background: #333; text-transform: uppercase; font-weight: bold; }
@@ -14,6 +14,8 @@
   </style>
 </head>
 <body>
+
+<div class="version">Version: Beta 0.0.01</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -51,6 +53,8 @@
     try {
       const response = await fetch(apiUrl);
       const data = await response.json();
+
+      if (!data.drivers || !data.constructors) throw new Error('Invalid JSON structure');
 
       // Drivers
       const driversTable = document.getElementById('drivers');
