--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.02</div>
+<div class="version">Version: Beta 0.0.03</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -47,7 +47,7 @@
 </table>
 
 <script>
-  const apiUrl = 'YOUR_RAW_SHEET_API_URL_HERE';
+  const apiUrl = 'https://script.google.com/macros/s/AKfycbyzy47hX-roRqeVZoxqCugWRZ543zRJnZXZiFn_1kgO8lFwiIXnrK5oT5ZU1TdHaFKY/exec';
 
   async function fetchLeaderboard() {
     try {
