--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.03</div>
+<div class="version">Version: Beta 0.0.04</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -55,11 +56,8 @@
       const data = await response.json();
 
       const driversData = data.slice(1).filter(row => row[0] && row[1]);
-      const driverStandings = driversData.map(row => ({
-        driver: row[0],
-        team: row[1],
-        totalPoints: row[18] || 0
-      })).sort((a, b) => b.totalPoints - a.totalPoints);
+      const drivers = driversData.map(row => ({ driver: row[0], team: row[1], totalPoints: row[18] || 0 }))
+        .sort((a, b) => b.totalPoints - a.totalPoints);
 
       const constructorsMap = {};
       driversData.forEach(row => {
@@ -69,24 +67,20 @@
         constructorsMap[team] += totalPoints;
       });
 
-      const constructorStandings = Object.keys(constructorsMap).map(team => ({
-        team,
-        points: constructorsMap[team]
-      })).sort((a, b) => b.points - a.points);
+      const constructors = Object.keys(constructorsMap).map(team => ({ team, points: constructorsMap[team] }))
+        .sort((a, b) => b.points - a.points);
 
-      // Render Drivers
       const driversTable = document.getElementById('drivers');
       driversTable.innerHTML = '';
-      driverStandings.forEach(d => {
+      drivers.forEach(d => {
         const row = document.createElement('tr');
         row.innerHTML = `<td>${d.driver}</td><td>${d.team}</td><td>${d.totalPoints}</td>`;
         driversTable.appendChild(row);
       });
 
-      // Render Constructors
       const constructorsTable = document.getElementById('constructors');
       constructorsTable.innerHTML = '';
-      constructorStandings.forEach(t => {
+      constructors.forEach(t => {
         const row = document.createElement('tr');
         row.innerHTML = `<td>${t.team}</td><td>${t.points}</td>`;
         constructorsTable.appendChild(row);
