--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -48,7 +48,7 @@
 </table>
 
 <script>
-  const apiUrl = 'https://docs.google.com/spreadsheets/d/1x1G2wDT6DBbMIltMwX9lIV14XRkg9HLbWUhekaU55jQ/gviz/tq?tqx=out:json';
+  const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/edit?gid=0#gid=0';
 
   async function fetchLeaderboard() {
     try {
