--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.06 (Sheet API)</div>
+<div class="version">Version: Beta 0.0.08 (Sheet API Confirmed)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -48,7 +48,7 @@
 </table>
 
 <script>
-  const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/edit?usp=sharing';
+  const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
 
   async function fetchLeaderboard() {
     try {
