--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -12,11 +12,12 @@
     th, td { padding: 10px; text-align: center; border-bottom: 1px solid #333; }
     th { background: #333; text-transform: uppercase; font-weight: bold; }
     tr:hover { background: #2a2a2a; }
+    img.logo { height: 20px; vertical-align: middle; margin-right: 8px; }
   </style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.09 (Sheet API + Unassigned Drivers)</div>
+<div class="version">Version: Beta 0.0.10 (Sheet API + Unassigned Drivers + Logos)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -62,6 +63,28 @@
 <script>
   const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
 
+  const teamLogos = {
+    "ALPINE": "ALPINE.webp",
+    "ASTON": "ASTON.webp",
+    "FERRARI": "FERRARI.webp",
+    "HAAS": "HAAS.webp",
+    "MCCLAREN": "MCCLAREN.webp",
+    "MERCEDES": "MERCEDES.webp",
+    "RACINGBULLS": "RACINGBULLS.webp",
+    "RBR": "RBR.webp",
+    "SAUBER": "SAUBER.webp",
+    "WILLIAMS": "WILLIAMS.webp"
+  };
+
+  function getTeamDisplay(teamName) {
+    const upperTeam = teamName.toUpperCase();
+    if (teamLogos[upperTeam]) {
+      return `<img src="${teamLogos[upperTeam]}" alt="${teamName}" class="logo">${teamName}`;
+    } else {
+      return teamName;
+    }
+  }
+
   async function fetchLeaderboard() {
     try {
       const response = await fetch(apiUrl);
@@ -90,7 +113,7 @@
       driversTable.innerHTML = '';
       drivers.forEach(d => {
         const row = document.createElement('tr');
-        row.innerHTML = `<td>${d.driver}</td><td>${d.team}</td><td>${d.totalPoints}</td>`;
+        row.innerHTML = `<td>${d.driver}</td><td>${getTeamDisplay(d.team)}</td><td>${d.totalPoints}</td>`;
         driversTable.appendChild(row);
       });
 
@@ -98,7 +121,7 @@
       constructorsTable.innerHTML = '';
       constructors.forEach(t => {
         const row = document.createElement('tr');
-        row.innerHTML = `<td>${t.team}</td><td>${t.points}</td>`;
+        row.innerHTML = `<td>${getTeamDisplay(t.team)}</td><td>${t.points}</td>`;
         constructorsTable.appendChild(row);
       });
 
