--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -68,7 +68,7 @@
     "ASTON": "ASTON.webp",
     "FERRARI": "FERRARI.webp",
     "HAAS": "HAAS.webp",
-    "MCCLAREN": "MCCLAREN.webp",
+    "MCLAREN": "MCLAREN.webp",
     "MERCEDES": "MERCEDES.webp",
     "RACINGBULLS": "RACINGBULLS.webp",
     "RBR": "RBR.webp",
