--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -64,16 +64,16 @@
   const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
 
   const teamLogos = {
-    "ALPINE": "ALPINE.webp",
-    "ASTON": "ASTON.webp",
-    "FERRARI": "FERRARI.webp",
-    "HAAS": "HAAS.webp",
-    "MCLAREN": "MCLAREN.webp",
-    "MERCEDES": "MERCEDES.webp",
-    "RACINGBULLS": "RACINGBULLS.webp",
-    "RBR": "RBR.webp",
-    "SAUBER": "SAUBER.webp",
-    "WILLIAMS": "WILLIAMS.webp"
+  "ALPINE": "ALPINE.webp",
+  "ASTON MARTIN": "ASTON.webp",
+  "FERRARI": "FERRARI.webp",
+  "HAAS": "HAAS.webp",
+  "MCLAREN": "MCLAREN.webp",
+  "MERCEDES": "MERCEDES.webp",
+  "RACING BULLS": "RACINGBULLS.webp",
+  "RED BULL RACING": "RBR.webp",
+  "KICK SAUBER": "SAUBER.webp",
+  "WILLIAMS": "WILLIAMS.webp"
   };
 
   function getTeamDisplay(teamName) {
