--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -66,7 +66,7 @@
   const teamLogos = {
   "ALPINE": "ALPINE.webp",
   "ASTON MARTIN": "ASTON.webp",
-  "FERRARI": "FERRARI.webp",
+  "FERRARI": "FERARRI.webp",
   "HAAS": "HAAS.webp",
   "MCLAREN": "MCLAREN.webp",
   "MERCEDES": "MERCEDES.webp",
