--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.10 (Sheet API + Unassigned Drivers + Logos)</div>
+<div class="version">Version: Beta 0.0.12 (Fully Cleaned Drivers + Logos)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -64,16 +64,16 @@
   const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
 
   const teamLogos = {
-  "ALPINE": "ALPINE.webp",
-  "ASTON MARTIN": "ASTON.webp",
-  "FERRARI": "FERARRI.webp",
-  "HAAS": "HAAS.webp",
-  "MCLAREN": "MCLAREN.webp",
-  "MERCEDES": "MERCEDES.webp",
-  "RACING BULLS": "RACINGBULLS.webp",
-  "RED BULL RACING": "RBR.webp",
-  "KICK SAUBER": "SAUBER.webp",
-  "WILLIAMS": "WILLIAMS.webp"
+    "ALPINE": "ALPINE.webp",
+    "ASTON MARTIN": "ASTON.webp",
+    "FERRARI": "FERRARI.webp",
+    "HAAS": "HAAS.webp",
+    "MCLAREN": "MCLAREN.webp",
+    "MERCEDES": "MERCEDES.webp",
+    "RACING BULLS": "RACINGBULLS.webp",
+    "RED BULL RACING": "RBR.webp",
+    "KICK SAUBER": "SAUBER.webp",
+    "WILLIAMS": "WILLIAMS.webp"
   };
 
   function getTeamDisplay(teamName) {
@@ -94,20 +94,11 @@
       const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
       console.log("Fetched Data:", data);
 
-      const driversData = data.slice(1).filter(row => row[0] && row[1]);
-      const drivers = driversData.map(row => ({ driver: row[0], team: row[1], totalPoints: row[18] || 0 }))
-        .sort((a, b) => b.totalPoints - a.totalPoints);
-
-      const constructorsMap = {}
-      driversData.forEach(row => {
-        const team = row[1];
-        const totalPoints = row[18] || 0;
-        if (!constructorsMap[team]) constructorsMap[team] = 0;
-        constructorsMap[team] += totalPoints;
-      });
-
-      const constructors = Object.keys(constructorsMap).map(team => ({ team, points: constructorsMap[team] }))
-        .sort((a, b) => b.points - a.points);
+      const drivers = data.slice(1).filter(row => row[0] && row[1]).map(row => ({ 
+        driver: row[0], 
+        team: row[1], 
+        totalPoints: row[18] || 0 
+      })).sort((a, b) => b.totalPoints - a.totalPoints);
 
       const driversTable = document.getElementById('drivers');
       driversTable.innerHTML = '';
@@ -116,6 +107,17 @@
         row.innerHTML = `<td>${d.driver}</td><td>${getTeamDisplay(d.team)}</td><td>${d.totalPoints}</td>`;
         driversTable.appendChild(row);
       });
+
+      const constructorsMap = {}
+      drivers.forEach(d => {
+        const team = d.team;
+        const totalPoints = d.totalPoints;
+        if (!constructorsMap[team]) constructorsMap[team] = 0;
+        constructorsMap[team] += totalPoints;
+      });
+
+      const constructors = Object.keys(constructorsMap).map(team => ({ team, points: constructorsMap[team] }))
+        .sort((a, b) => b.points - a.points);
 
       const constructorsTable = document.getElementById('constructors');
       constructorsTable.innerHTML = '';
