--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.12 (Fully Cleaned Drivers + Logos)</div>
+<div class="version">Version: Beta 0.0.13 (Fully Corrected Drivers + Safe Trim + Ferrari logo fixed)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -92,12 +92,12 @@
       const json = JSON.parse(text.substring(47).slice(0, -2));
 
       const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
-      console.log("Fetched Data:", data);
+      console.log("Drivers Raw Data:", data);
 
-      const drivers = data.slice(1).filter(row => row[0] && row[1]).map(row => ({ 
-        driver: row[0], 
-        team: row[1], 
-        totalPoints: row[18] || 0 
+      const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({ 
+        driver: row[0].trim(), 
+        team: row[1].trim(), 
+        totalPoints: row[18] ? parseInt(row[18]) : 0
       })).sort((a, b) => b.totalPoints - a.totalPoints);
 
       const driversTable = document.getElementById('drivers');
@@ -127,7 +127,7 @@
         constructorsTable.appendChild(row);
       });
 
-      const unassignedData = data.slice(1).filter(row => row[0] && !row[1]);
+      const unassignedData = data.slice(0).filter(row => row[0] && !row[1]);
       const unassignedTable = document.getElementById('unassigned');
       unassignedTable.innerHTML = '';
       if (unassignedData.length > 0) {
