--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -9,15 +9,15 @@
     h1, h2 { text-align: center; }
     .version { position: fixed; top: 10px; left: 10px; font-size: 0.8em; color: #777; }
     table { width: 100%; border-collapse: collapse; background: #1f1f1f; margin: 20px 0; border-radius: 8px; overflow: hidden; }
-    th, td { padding: 10px; text-align: center; border-bottom: 1px solid #333; }
+    th, td { padding: 10px; text-align: center; vertical-align: middle; border-bottom: 1px solid #333; }
     th { background: #333; text-transform: uppercase; font-weight: bold; }
     tr:hover { background: #2a2a2a; }
-    img.logo { height: 20px; vertical-align: middle; margin-right: 8px; }
+    img.logo { height: 24px; vertical-align: middle; margin-right: 8px; }
   </style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.13 (Fully Corrected Drivers + Safe Trim + Ferrari logo fixed)</div>
+<div class="version">Version: Beta 0.0.14 (Logos Bigger + Center Aligned)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -79,7 +79,7 @@
   function getTeamDisplay(teamName) {
     const upperTeam = teamName.toUpperCase();
     if (teamLogos[upperTeam]) {
-      return `<img src="${teamLogos[upperTeam]}" alt="${teamName}" class="logo">${teamName}`;
+      return `<div style="display:flex;align-items:center;justify-content:center;"><img src="${teamLogos[upperTeam]}" alt="${teamName}" class="logo">${teamName}</div>`;
     } else {
       return teamName;
     }
@@ -92,7 +92,6 @@
       const json = JSON.parse(text.substring(47).slice(0, -2));
 
       const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
-      console.log("Drivers Raw Data:", data);
 
       const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({ 
         driver: row[0].trim(), 
