--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -73,6 +73,7 @@
     "RACING BULLS": "RACINGBULLS.webp",
     "RED BULL RACING": "RBR.webp",
     "KICK SAUBER": "SAUBER.webp",
+    "KRESERVE": "RESERVE.webp",
     "WILLIAMS": "WILLIAMS.webp"
   };
 
