--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.15 (Logos Bigger + Center Aligned)</div>
+<div class="version">Version: Beta 0.0.16 (Logos Bigger + Center Aligned)</div>
 
 <h1>IFWL F1 Leaderboard</h1>
 
@@ -73,7 +73,7 @@
     "RACING BULLS": "RACINGBULLS.webp",
     "RED BULL RACING": "RBR.webp",
     "KICK SAUBER": "SAUBER.webp",
-    "KRESERVE": "RESERVE.webp",
+    "RESERVE": "RESERVE.webp",
     "WILLIAMS": "WILLIAMS.webp"
   };
 
