--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -5,21 +5,72 @@
   <meta charset="UTF-8">
   <title>IFWL F1 Leaderboard</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; padding: 20px; }
-    h1, h2 { text-align: center; }
-    .version { position: fixed; top: 10px; left: 10px; font-size: 0.8em; color: #777; }
-    table { width: 100%; border-collapse: collapse; background: #1f1f1f; margin: 20px 0; border-radius: 8px; overflow: hidden; }
-    th, td { padding: 10px; text-align: center; vertical-align: middle; border-bottom: 1px solid #333; }
-    th { background: #333; text-transform: uppercase; font-weight: bold; }
-    tr:hover { background: #2a2a2a; }
-    img.logo { height: 48px; vertical-align: middle; margin-right: 8px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: url('ifwl_bg.webp') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      margin: 0;
+      padding: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .version {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      font-size: 0.8em;
+      color: #ccc;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 10px;
+    }
+    .header img {
+      height: 48px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: rgba(0, 0, 0, 0.75);
+      margin: 20px 0;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    th, td {
+      padding: 10px;
+      text-align: center;
+      vertical-align: middle;
+      border-bottom: 1px solid #333;
+    }
+    th {
+      background: #333;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+    tr:hover {
+      background: rgba(255, 255, 255, 0.05);
+    }
+    img.logo {
+      height: 48px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
   </style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.16 (Logos Bigger + Center Aligned)</div>
+<div class="version">Version: Beta 0.0.15 (BG + Logos + Reserve)</div>
 
-<h1>IFWL F1 Leaderboard</h1>
+<div class="header">
+  <img src="ifwl_logo.png" alt="IFWL Logo">
+  <h1>IFWL F1 Leaderboard</h1>
+  <img src="ifwl_logo.png" alt="IFWL Logo">
+</div>
 
 <h2>Driver Standings</h2>
 <table>
@@ -91,12 +142,11 @@
       const response = await fetch(apiUrl);
       const text = await response.text();
       const json = JSON.parse(text.substring(47).slice(0, -2));
-
       const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
 
-      const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({ 
-        driver: row[0].trim(), 
-        team: row[1].trim(), 
+      const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({
+        driver: row[0].trim(),
+        team: row[1].trim(),
         totalPoints: row[18] ? parseInt(row[18]) : 0
       })).sort((a, b) => b.totalPoints - a.totalPoints);
 
@@ -108,7 +158,7 @@
         driversTable.appendChild(row);
       });
 
-      const constructorsMap = {}
+      const constructorsMap = {};
       drivers.forEach(d => {
         const team = d.team;
         const totalPoints = d.totalPoints;
