--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -14,6 +14,7 @@
       padding: 20px;
     }
     h1, h2 {
+      color: #000;
       text-align: center;
     }
     .version {
@@ -64,7 +65,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.15 (BG + Logos + Reserve)</div>
+<div class="version">Version: Beta 0.0.16 (BG + Logos + Reserve)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
