--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -9,13 +9,12 @@
       font-family: Arial, sans-serif;
       background: url('ifwl_bg.webp') no-repeat center center fixed;
       background-size: cover;
-      color: #fff;
       margin: 0;
       padding: 20px;
     }
     h1, h2 {
-      color: #000;
       text-align: center;
+      color: #000;
     }
     .version {
       position: fixed;
@@ -41,6 +40,7 @@
       margin: 20px 0;
       border-radius: 8px;
       overflow: hidden;
+      color: white;
     }
     th, td {
       padding: 10px;
@@ -61,11 +61,30 @@
       vertical-align: middle;
       margin-right: 8px;
     }
+    .driver-row {
+      position: relative;
+      background-size: 100px auto;
+      background-position: right center;
+      background-repeat: no-repeat;
+      background-blend-mode: overlay;
+    }
+    .team-MERCEDES { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
+    .team-MCLAREN { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
+    .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
+    .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
+    .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
+    .team-ASTON MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
+    .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
+    .team-ALPINE { background-color: #0090FF; background-image: url('ALPINEL
+
+OGO.webp'); }
+    .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
+    .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
   </style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.16 (BG + Logos + Reserve)</div>
+<div class="version">Version: Beta 0.0.17 (Team Row Backgrounds + Logos)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
@@ -155,6 +174,7 @@
       driversTable.innerHTML = '';
       drivers.forEach(d => {
         const row = document.createElement('tr');
+        row.className = 'driver-row team-' + d.team.toUpperCase();
         row.innerHTML = `<td>${d.driver}</td><td>${getTeamDisplay(d.team)}</td><td>${d.totalPoints}</td>`;
         driversTable.appendChild(row);
       });
