--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -80,11 +80,36 @@
 OGO.webp'); }
     .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
     .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
-  </style>
+  
+<style>
+/* Team Colors */
+.team-MERCEDES { background-color: #00D2BE; }
+.team-MCLAREN { background-color: #FF8700; }
+.team-FERRARI { background-color: #DC0000; }
+.team-WILLIAMS { background-color: #005AFF; }
+.team-HAAS { background-color: #B6BABD; }
+.team-ASTON { background-color: #004940; }
+.team-ASTON\ MARTIN { background-color: #004940; }
+.team-KICK { background-color: #000000; }
+.team-KICK\ SAUBER { background-color: #000000; }
+.team-RESERVE { background-color: #FFFFFF; color: black; }
+.team-RED\ BULL\ RACING,
+.team-RACING\ BULLS {
+    background-color: #1B1443;
+}
+
+/* Ensure logos are full color */
+.team-logo {
+  opacity: 1 !important;
+  filter: none !important;
+}
+</style>
+
+</style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.17 (Team Row Backgrounds + Logos)</div>
+<div class="version">Version: Beta 0.0.19 (Team Row Backgrounds + Logos)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
