--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -4,10 +4,83 @@
 <head>
   <meta charset="UTF-8">
   <title>IFWL F1 Leaderboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: url('ifwl_bg.webp') no-repeat center center fixed;
+      background-size: cover;
+      margin: 0;
+      padding: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+      color: #000;
+    }
+    .version {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      font-size: 0.8em;
+      color: #ccc;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 10px;
+    }
+    .header img {
+      height: 48px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: rgba(0, 0, 0, 0.75);
+      margin: 20px 0;
+      border-radius: 8px;
+      overflow: hidden;
+      color: white;
+    }
+    th, td {
+      padding: 10px;
+      text-align: center;
+      vertical-align: middle;
+      border-bottom: 1px solid #333;
+    }
+    th {
+      background: #333;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+    tr:hover {
+      background: rgba(255, 255, 255, 0.05);
+    }
+    img.logo {
+      height: 48px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+    .driver-row {
+      position: relative;
+      background-size: 100px auto;
+      background-position: right center;
+      background-repeat: no-repeat;
+      background-blend-mode: overlay;
+    }
+    .team-MERCEDES { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
+    .team-MCLAREN { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
+    .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
+    .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
+    .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
+    .team-ASTON MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
+    .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
+    .team-ALPINE { background-color: #0090FF; background-image: url('ALPINEL
+
+OGO.webp'); }
+    .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
+    .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
   
-
-</style>
-
 <style>
 /* Team Colors */
 .team-MERCEDES { background-color: #00D2BE; }
@@ -25,8 +98,24 @@
     background-color: #1B1443;
 }
 
-/* Force full-color logos, no fading */
+/* Ensure logos are full color */
 .team-logo {
+  opacity: 1 !important;
+  filter: none !important;
+}
+</style>
+
+</style>
+
+<style>
+.team-ASTON\ MARTIN { background-color: #004940; }
+.team-KICK\ SAUBER { background-color: #000000; }
+.team-RESERVE { background-color: #FFFFFF; color: #000000; }
+.team-RED\ BULL\ RACING,
+.team-RACING\ BULLS { background-color: #1B1443; }
+
+/* Ensure logos show at full color without fade */
+img.logo {
   opacity: 1 !important;
   filter: none !important;
   mix-blend-mode: normal !important;
@@ -36,7 +125,7 @@
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.19 (Team Row Backgrounds + Logos)</div>
+<div class="version">Version: Beta 0.0.19 (Color + Logo Fix) (Team Row Backgrounds + Logos)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
