--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -100,32 +100,16 @@ OGO.webp'); }
 
 /* Ensure logos are full color */
 .team-logo {
-  opacity: 1 !important;
-  filter: none !important;
+  
+  
 }
 </style>
 
 </style>
-
-<style>
-.team-ASTON\ MARTIN { background-color: #004940; }
-.team-KICK\ SAUBER { background-color: #000000; }
-.team-RESERVE { background-color: #FFFFFF; color: #000000; }
-.team-RED\ BULL\ RACING,
-.team-RACING\ BULLS { background-color: #1B1443; }
-
-/* Ensure logos show at full color without fade */
-img.logo {
-  opacity: 1 !important;
-  filter: none !important;
-  mix-blend-mode: normal !important;
-}
-</style>
-
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.19 (Color + Logo Fix) (Team Row Backgrounds + Logos)</div>
+<div class="version">Version: Beta 0.0.19 (Team Row Backgrounds + Logos)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
